--- a/src/components/landing/CollaboratorsSection.astro
+++ b/src/components/landing/CollaboratorsSection.astro
@@ -6,7 +6,7 @@ import type { PageContent } from '../../data/content';
 
 interface Props {
   collaborators: PageContent['collaborators'];
-  collaboratorImages: Record<'nils_bertol' | 'pau_luther' | 'johannes_ruedl' | 'david_hofer' | 'birgith_unterthurner', ImageMetadata>;
+  collaboratorImages: Record<'nils_bertol' | 'katherina_damisch' | 'pau_luther' | 'johannes_ruedl' | 'david_hofer' | 'birgith_unterthurner', ImageMetadata>;
 }
 
 const { collaborators, collaboratorImages } = Astro.props;
